--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Unicode Pipe</title>
+<!--     
+    I didn't write this code, ChatGPT did. You can decide whether it was worth the water wasted lol.
+    
+    A website by Kevin Mead (kevinmead.tv)
+    -->
 <style>
     body {
         font-family: Arial, sans-serif;
