--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </button>
 
     <div class="success-container">
-        <div class="success-message" id="successMessage">✓ A Unicode pipe has been copied to your clipboard. For future reference, this character is probably right below your delete/backspace key on your keyboard.</div>
+        <div class="success-message" id="successMessage">✓ A Unicode pipe has been copied to your clipboard. For future reference, this character is probably right below the delete/backspace key on your keyboard.</div>
     </div>
 
     <script>
